build: create register and login page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,7 @@
         "no-undef-init": "error",
         "no-var": "error",
         "object-shorthand": "error",
-        "prefer-const": "error",
+        "prefer-const": "off",
         "prefer-object-spread": "error",
         "unicode-bom": ["error", "never"],
 
@@ -65,7 +65,7 @@
 
         // @typescript-eslint/eslint-plugin
         "@typescript-eslint/naming-convention": [
-            "error",
+            "off",
             { "selector": "typeLike", "format": ["PascalCase"], "filter": { "regex": "^(__String|[A-Za-z]+_[A-Za-z]+)$", "match": false } },
             { "selector": "interface", "format": ["PascalCase"], "custom": { "regex": "^I[A-Z]", "match": false }, "filter": { "regex": "^I(Arguments|TextWriter|O([A-Z][a-z]+[A-Za-z]*)?)$", "match": false } },
             { "selector": "variable", "format": ["camelCase", "PascalCase", "UPPER_CASE"], "leadingUnderscore": "allow", "filter": { "regex": "^(_{1,2}filename|_{1,2}dirname|_+|[A-Za-z]+_[A-Za-z]+)$", "match": false } },
