--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.3",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.15.2",
     "jest-sonar-reporter": "^2.0.0",
