--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@ant-design/icons": "^4.8.3",
     "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.15.4",
+    "axios": "^1.6.8",
+    "dexie": "^4.0.1",
     "jest-sonar-reporter": "^2.0.0",
     "next": "13.4.12",
     "react": "18.2.0",
