--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.3",
     "@reduxjs/toolkit": "^2.2.1",
+    "ahooks": "^3.7.11",
     "antd": "^5.15.4",
     "axios": "^1.6.8",
     "dexie": "^4.0.1",
