--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.3",
+    "@material-ui/core": "^4.12.4",
     "@reduxjs/toolkit": "^2.2.1",
     "ahooks": "^3.7.11",
     "antd": "^5.15.4",
