--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "antd": "^5.15.4",
     "antd-style": "^3.6.2",
     "axios": "^1.6.8",
+    "chai": "^5.1.1",
     "dexie": "^4.0.1",
+    "enzyme": "^3.11.0",
     "jest-sonar-reporter": "^2.0.0",
     "next": "13.5.6",
     "react": "18.2.0",
@@ -31,6 +33,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/chai": "^4.3.16",
     "@types/jest": "^29.2.0",
     "@types/node": "^20.4.5",
     "@types/react": "^18.0.0",
